--- a/packages/docs/src/content/docs/guides/import-patterns.mdx
+++ b/packages/docs/src/content/docs/guides/import-patterns.mdx
@@ -3,7 +3,7 @@ title: Import Patterns & Composable Architecture
 description: Lattice's composable design lets you import only what you need
 ---
 
-import { Card, Aside, CardGrid } from '@astrojs/starlight/components';
+import { Card, Aside, CardGrid, Tabs, TabItem } from '@astrojs/starlight/components';
 
 <Aside type="tip" title="Philosophy: Use Only What You Need">
   Lattice is built on the principle of composability. Each feature is available as a separate import, so you only bundle what you actually use. This isn't just about optimization - it's about giving you architectural control.
