--- a/packages/docs/src/content/docs/index.mdx
+++ b/packages/docs/src/content/docs/index.mdx
@@ -15,7 +15,7 @@ hero:
       icon: external
 ---
 
-import { Card, CardGrid, Tabs, TabItem } from '@astrojs/starlight/components';
+import { Card, CardGrid, Tabs, TabItem, Aside } from '@astrojs/starlight/components';
 
 ## The Problem We All Face
 
