--- a/packages/docs/src/content/docs/index.mdx
+++ b/packages/docs/src/content/docs/index.mdx
@@ -97,15 +97,14 @@ The **same behavior code** powers all three components. Write once, test once, m
   </Card>
 </CardGrid>
 
-## Real Teams, Real Results
+## The Development Experience
 
-> "We cut our component development time by 70%. Instead of three teams building dropdowns, we have one behavior that everyone uses." 
-> 
-> — *Lead Engineer, Design System Team*
+When you write a behavior once in Lattice, you get:
 
-> "The best part? When we fix a bug in the behavior, it's fixed everywhere. No more playing whack-a-mole across frameworks."
-> 
-> — *Frontend Architect, Fortune 500*
+- **Unified testing** - Test the behavior logic once, not once per framework
+- **Single source of truth** - Bug fixes and features propagate everywhere  
+- **Consistent behavior** - The same interaction patterns across all your apps
+- **Faster iteration** - Change the behavior logic and see it update everywhere instantly
 
 ## Composable by Design
 
@@ -158,12 +157,6 @@ That's it. This counter now works in any framework.
     </a>
   </div>
 </Card>
-
-## Trusted By Teams Who Ship
-
-<div class="logo-grid">
-  {/* Add customer logos here */}
-</div>
 
 ---
 
