move to runes again

--- a/packages/docs/src/content/docs/guides/base-bundle.mdx
+++ b/packages/docs/src/content/docs/guides/base-bundle.mdx
@@ -120,8 +120,7 @@ import { createStore } from '@lattice/core/base';
 import { useSliceValues } from '@lattice/runtime';
 
 // 3. Need existing library integration? Use adapters
-import { createSlice } from '@lattice/core';
-import { createZustandAdapter } from '@lattice/adapter-zustand';
+import { createStore } from '@lattice/adapter-zustand';
 ```
 
 ## The Strategy
