--- a/packages/docs/src/content/docs/guides/import-patterns.mdx
+++ b/packages/docs/src/content/docs/guides/import-patterns.mdx
@@ -20,7 +20,7 @@ Lattice isn't a monolithic library - it's a collection of focused, composable ut
 import { compose } from '@lattice/core/compose';
 import { createStore } from '@lattice/core/store';
 import { subscribeToSlices } from '@lattice/core/subscribe';
-import { createLatticeStore } from '@lattice/core/runtime';
+import { createLatticeStore } from '@lattice/core';
 
 // 🚀 Convenience imports
 import { createSlice, compose } from '@lattice/core';
