feat(benchmarks): add Svelte 5 runes over-reactivity performance benchmark
Adds comprehensive benchmark comparing Svelte 5 $derived against Lattice slices
in scenarios where traditional $derived over-triggers due to unrelated state changes.

Key improvements:
- Fair comparison using equivalent APIs and update patterns
- Dashboard scenario with mixed relevant/irrelevant updates
- Demonstrates 1.8x-4x performance gains preventing unnecessary computations
- Updated benchmark runner to support .svelte.ts files

Results show Lattice's core value: preventing expensive computations from
running when unrelated state changes in complex applications.

--- a/packages/docs/src/content/docs/guides/getting-started.mdx
+++ b/packages/docs/src/content/docs/guides/getting-started.mdx
@@ -154,7 +154,13 @@ Now use your counter in any framework:
   <TabItem label="Svelte">
     ```svelte
     <script>
-    import { createStore } from '@lattice/adapter-svelte';
+    // Svelte 5 + Runes (Recommended)
+    import { createStore } from '@lattice/core';
+    const state = $state({ count: 0 });
+    const createSlice = createStore(state);
+    
+    // OR Svelte 4 + Stores (Legacy)
+    import { asStore } from '@lattice/frameworks/svelte';
     import { createCounter } from './counter';
     
     // Svelte can use reactive state directly
