--- a/packages/docs/src/content/docs/guides/bundle-size.mdx
+++ b/packages/docs/src/content/docs/guides/bundle-size.mdx
@@ -42,7 +42,7 @@ Each adapter is designed to be lightweight and leverage your existing state mana
 - **`@lattice/adapter-store-react`** - Direct React state integration
 - **`@lattice/adapter-zustand`** - Builds on Zustand's minimalism
 - **`@lattice/adapter-redux`** - Works with your existing Redux setup
-- **`@lattice/adapter-svelte`** - Integrates with Svelte's reactivity
+- **`@lattice/frameworks/svelte`** - Svelte store utilities (legacy support)
 
 ## Performance Benefits
 
