--- a/packages/docs/src/content/docs/index.mdx
+++ b/packages/docs/src/content/docs/index.mdx
@@ -39,7 +39,7 @@ service.computed(() => …); // through the service
 - A **primitive** is a factory function—a building block
 - A **service** is a composed set of primitives
 
-At it's core, that's it. `compose()` is the backbone of Lattice: a simple, type-safe way to wire primitives together with their dependencies.
+At its core, that's it. `compose()` is the backbone of Lattice: a simple, type-safe way to wire primitives together with their dependencies.
 
 ---
 
