--- a/packages/docs/src/content/docs/index.mdx
+++ b/packages/docs/src/content/docs/index.mdx
@@ -67,9 +67,9 @@ These primitives produce different outputs:
 Most users won't need to call `compose()` directly. Lattice provides **presets**—pre-composed services, with their dependencies, ready to use:
 
 ```typescript
-import { createDOMSvc } from '@lattice/view/presets/dom';
+import { createDOMView } from '@lattice/view/presets/dom';
 
-const { el, signal, computed, mount } = createDOMSvc();
+const { el, signal, computed, mount } = createDOMView();
 
 const App = () => {
   const count = signal(0);
@@ -83,7 +83,7 @@ const App = () => {
 mount(App(), document.body);
 ```
 
-`createDOMSvc()` bundles signal primitives, view primitives, and a DOM adapter into one service. But it's just a convenience—under the hood, it's using `compose()`. If you want to replace any of them, you totally can. In fact, you can re-use our primitives and replace their underlying dependencies if you want to change their behavior. You have control down to the very base reactive, UI model, and renderer itself.
+`createDOMView()` bundles signal primitives, view primitives, and a DOM adapter into one service. But it's just a convenience—under the hood, it's using `compose()`. If you want to replace any of them, you totally can. In fact, you can re-use our primitives and replace their underlying dependencies if you want to change their behavior. You have control down to the very base reactive, UI model, and renderer itself.
 
 ---
 
@@ -92,14 +92,14 @@ mount(App(), document.body);
 Need to share signals across multiple renderers? Compose services yourself:
 
 ```typescript
-import { createSignalsSvc } from '@lattice/signals/presets/core';
-import { createDOMSvc } from '@lattice/view/presets/dom';
+import { createSignals } from '@lattice/signals/presets/core';
+import { createDOMView } from '@lattice/view/presets/dom';
 
 // Shared signals
-const signals = createSignalsSvc();
+const signals = createSignals();
 
 // Multiple view services using the same signals
-const dom = createDOMSvc(signals);
+const dom = createDOMView(signals);
 const canvas = createCanvasViewSvc(signals); // your custom adapter
 
 // Same signal, multiple rendering targets
